Fix result text's spacings

--- a/styles.css
+++ b/styles.css
@@ -85,8 +85,11 @@ progress::before {
 .result h1 {
     font-family: oldSchoolFont;
     font-size: 2rem;
-    margin-top: 0.5em;
-    margin-bottom: 0;
+    margin: 0;
+}
+
+.result h2 {
+    margin: 0.5em 0;
 }
 
 div.result, div.playerChoice, div.computerChoice {
@@ -98,13 +101,12 @@ div.result, div.playerChoice, div.computerChoice {
     box-shadow: 0px 0px 5px 3px rgb(160, 93, 48, 0.5);
 }
 
-div.result {
+.mainScreen .result {
     font-family: oldSchoolFont;
     font-size: 1.5rem;
     letter-spacing: 0.15rem;
     position: relative;
-    vertical-align: top;
-    height: 100%;
+    height: 100;
     width: 50%;
 }
 
